Arreglé algunas cosas que hacian que no compile. 1) Incompatibilidades entre prototipos y funciones. 2) Orden diferente de parametros de irqDispatcher, en assembly pasaba TrapFrame, Irq, pero en c lo pasaba al reves. 3) Actualice el makefile para incluir MM sched y procesos 4) Al incluir Registers_t como argumento de keyboard_handler se creaba una dependencia circular entre keyboardDriver.h y syscalls.h, por lo que movi el include de keyboardDriver.h a syscalls.c en vez de syscalls.h.

--- a/x64BareBones/Kernel/Makefile
+++ b/x64BareBones/Kernel/Makefile
@@ -7,7 +7,10 @@ SOURCES=$(wildcard core/*.c) \
          $(wildcard interrupt/*.c) \
          $(wildcard drivers/*/*.c) \
          $(wildcard lib/*/*.c) \
-         $(wildcard syscall/*.c)
+         $(wildcard syscall/*.c) \
+         $(wildcard mem/*.c) \
+         $(wildcard sched/*.c) \
+         $(wildcard proc/*.c)
 
 # Loader (entry point) - must be first
 LOADER=arch/x86_64/asm/loader.asm
@@ -36,7 +39,10 @@ INCLUDE_DIRS=-I./arch/x86_64/include \
              -I./lib/console \
              -I./lib/string \
              -I./syscall/include \
-             -I./arch/x86_64/asm
+             -I./arch/x86_64/asm \
+             -I./mem/include \
+             -I./sched/include \
+             -I./proc/include
 
 # Updated GCCFLAGS with include directories
 GCC_WITH_INCLUDES=$(GCCFLAGS) $(INCLUDE_DIRS)
