--- a/x64BareBones/Makefile
+++ b/x64BareBones/Makefile
@@ -13,10 +13,14 @@ userland:
 image: kernel bootloader userland
 	cd Image; make all
 
+test:
+	cd test; make test-kernel
+
 clean:
 	cd Bootloader; make clean
 	cd Image; make clean
 	cd Kernel; make clean
 	cd Userland; make clean
+	cd test; make clean
 
-.PHONY: bootloader image collections kernel userland all clean
+.PHONY: bootloader image collections kernel userland all clean test
