--- a/x64BareBones/Kernel/Makefile.inc
+++ b/x64BareBones/Kernel/Makefile.inc
@@ -5,5 +5,5 @@ ASM=nasm
 
 GCCFLAGS=-m64 -g -fno-exceptions -fno-asynchronous-unwind-tables -mno-mmx -mno-sse -mno-sse2 -fno-builtin-malloc -fno-builtin-free -fno-builtin-realloc -mno-red-zone -Wall -ffreestanding -nostdlib -fno-common -std=c99 -fno-pie
 ARFLAGS=rvs
-ASMFLAGS=-felf64
+ASMFLAGS=-felf64 -g -F dwarf
 LDFLAGS=--warn-common -z max-page-size=0x1000
