Cambie el clang-format para que use Allman style. Agregue tests, no se si deberian funcionar. Falta probarlo y debugearlo.

--- a/x64BareBones/Kernel/Makefile
+++ b/x64BareBones/Kernel/Makefile
@@ -11,6 +11,7 @@ SOURCES=$(wildcard core/*.c) \
          $(wildcard interrupt/*.c) \
          $(wildcard drivers/*/*.c) \
          $(wildcard lib/*/*.c) \
+         $(wildcard lib/*/*/*.c) \
          $(wildcard syscall/*.c) \
          $(filter-out mem/Test%.c,$(wildcard mem/*.c)) \
          $(wildcard sched/*.c) \
