--- a/x64BareBones/Userland/UserLib/Makefile
+++ b/x64BareBones/Userland/UserLib/Makefile
@@ -6,6 +6,8 @@ ASM_OBJS := $(ASM_SRCS:.asm=.o)
 C_SRCS   := $(wildcard *.c)
 C_OBJS   := $(C_SRCS:.c=.o)
 
+HEADERS  := $(wildcard include/*.h)
+
 LIB      := libuserland.a
 
 .PHONY: all clean
@@ -14,7 +16,7 @@ all: $(LIB)
 asm/%.o: asm/%.asm
 	$(ASM) $(ASMFLAGS) $< -o $@
 
-%.o: %.c
+%.o: %.c $(HEADERS)
 	$(GCC) $(GCCFLAGS) -Iinclude -c $< -o $@
 
 $(LIB): $(ASM_OBJS) $(C_OBJS)
