fixes de pipes, ahora compila

--- a/x64BareBones/Kernel/Makefile
+++ b/x64BareBones/Kernel/Makefile
@@ -16,6 +16,7 @@ SOURCES=$(wildcard core/*.c) \
          $(filter-out mem/Test%.c,$(wildcard mem/*.c)) \
          $(wildcard sched/*.c) \
          $(wildcard proc/*.c) \
+         $(wildcard ipc/*.c) \
          $(filter-out semaphore/Test%.c,$(wildcard semaphore/*.c))
 
 # Loader (entry point) - must be first
@@ -53,7 +54,8 @@ INCLUDE_DIRS=-I./arch/x86_64/include \
              -I./proc/include \
              -I./proc \
              -I./semaphore/include \
-             -I./sync/include
+             -I./sync/include \
+             -I./ipc/include
 
 # Updated GCCFLAGS with include directories
 GCC_WITH_INCLUDES=$(GCCFLAGS) $(INCLUDE_DIRS)
