Mejora de pipes y testers de CuTest para pipes

--- a/x64BareBones/test/Makefile
+++ b/x64BareBones/test/Makefile
@@ -10,17 +10,20 @@ INCLUDE_DIRS = -I. \
                -I../Kernel/proc/include \
                -I../Kernel/sync/include \
                -I../Kernel/semaphore/include \
+               -I../Kernel/ipc/include \
                -I../Kernel/include
 
 KERNEL_TESTS = test_kernel
 
 CUTEST_OBJ = CuTest.o
 ALLTESTS_OBJ = AllTests.o
-TEST_OBJS = ../Kernel/mem/TestMemoryManager.o ../Kernel/semaphore/TestSemaphore.o
-MM_OBJS = ../Kernel/mem/pmem_bitmap.o ../Kernel/mem/pmem_buddy.o
+MOCK_OBJS = MockFunctions.o
+TEST_OBJS = ../Kernel/mem/TestMemoryManager.o ../Kernel/semaphore/TestSemaphore.o ../Kernel/ipc/TestPipe.o
+MM_OBJS = ../Kernel/mem/pmem_bitmap.o
 ADT_OBJS = ../Kernel/lib/ADT/Queue/queue.o ../Kernel/lib/ADT/DoubleLinkedList/doubleLinkedList.o
 LIB_OBJS = ../Kernel/lib/string/strings.o
 SEM_OBJS = ../Kernel/semaphore/semaphore.o
+PIPE_OBJS = ../Kernel/ipc/pipe.o
 
 .PHONY: all test-kernel test-userland clean help
 
@@ -33,13 +36,17 @@ test-kernel: $(KERNEL_TESTS)
 	@echo "=========================================="
 	@./$(KERNEL_TESTS)
 
-test_kernel: $(CUTEST_OBJ) $(ALLTESTS_OBJ) $(TEST_OBJS) $(MM_OBJS) $(ADT_OBJS) $(LIB_OBJS) $(SEM_OBJS)
+test_kernel: $(CUTEST_OBJ) $(ALLTESTS_OBJ) $(MOCK_OBJS) $(TEST_OBJS) $(MM_OBJS) $(ADT_OBJS) $(LIB_OBJS) $(SEM_OBJS) $(PIPE_OBJS)
 	gcc -std=c99 -Wall -Wextra -g $(INCLUDE_DIRS) -o $@ $^ -lm
 
 test-userland:
 	@echo "Userland tests not yet implemented"
 
 %.o: %.c
+	gcc $(CFLAGS) $(INCLUDE_DIRS) -c $< -o $@
+
+# Mock functions - shared across all test suites
+MockFunctions.o: MockFunctions.c
 	gcc $(CFLAGS) $(INCLUDE_DIRS) -c $< -o $@
 
 # Kernel modules - compile with -fPIE for PIE executable
@@ -59,7 +66,7 @@ test-userland:
 	gcc $(CFLAGS) $(INCLUDE_DIRS) -c $< -o $@
 
 ../Kernel/lib/string/strings.o: ../Kernel/lib/string/strings.c
-	gcc $(CFLAGS) $(INCLUDE_DIRS) -c $< -o $@
+	gcc -Wall -Wextra -g -std=c99 -fPIE $(INCLUDE_DIRS) -c $< -o $@
 
 ../Kernel/semaphore/TestSemaphore.o: ../Kernel/semaphore/TestSemaphore.c
 	gcc $(CFLAGS) $(INCLUDE_DIRS) -c $< -o $@
@@ -67,11 +74,18 @@ test-userland:
 ../Kernel/semaphore/semaphore.o: ../Kernel/semaphore/semaphore.c
 	gcc $(CFLAGS) $(INCLUDE_DIRS) -c $< -o $@
 
+../Kernel/ipc/TestPipe.o: ../Kernel/ipc/TestPipe.c
+	gcc $(CFLAGS) $(INCLUDE_DIRS) -c $< -o $@
+
+../Kernel/ipc/pipe.o: ../Kernel/ipc/pipe.c
+	gcc $(CFLAGS) $(INCLUDE_DIRS) -c $< -o $@
+
 clean:
-	rm -f *.o test_kernel
+	rm -f *.o test_kernel MockFunctions.o
 	rm -f ../Kernel/mem/TestMemoryManager.o
 	rm -f ../Kernel/mem/pmem_bitmap.o ../Kernel/mem/pmem_buddy.o
 	rm -f ../Kernel/semaphore/TestSemaphore.o ../Kernel/semaphore/semaphore.o
+	rm -f ../Kernel/ipc/TestPipe.o ../Kernel/ipc/pipe.o
 	@echo "Test artifacts cleaned"
 
 help:
